[gd_scene load_steps=10 format=3 uid="uid://cklnjgls5m5sv"]

[ext_resource type="Script" path="res://scenes/menus/level_selection_menu.gd" id="1_hnvi8"]
[ext_resource type="AudioStream" uid="uid://ckqe6ukwee3st" path="res://assets/audio/sfx/uicancel.mp3" id="2_bo64h"]
[ext_resource type="FontFile" uid="uid://crbl5gri0ttq8" path="res://assets/fonts/JosefinSans-Bold.ttf" id="2_ehvep"]
[ext_resource type="Theme" uid="uid://bi6y5204pt206" path="res://assets/themes/bigButtons.tres" id="3_3cqpp"]
[ext_resource type="AudioStream" uid="uid://ruv8drg81mk2" path="res://assets/audio/sfx/uihover.mp3" id="3_olwrc"]
[ext_resource type="LabelSettings" uid="uid://bmevc5ep5wcdf" path="res://assets/themes/title.tres" id="4_d4l1l"]
[ext_resource type="Texture2D" uid="uid://cvrt4hqopfoy1" path="res://assets/UI/ArrowLeft@2x.png" id="4_tjne4"]
[ext_resource type="AudioStream" uid="uid://bkcptj3o0owvm" path="res://assets/audio/sfx/uiclickon.mp3" id="4_u052i"]

[sub_resource type="LabelSettings" id="LabelSettings_6i4mc"]
font_size = 23

[node name="LevelSelectionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hnvi8")

[node name="BackStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_bo64h")
volume_db = -22.0

[node name="HoverStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_olwrc")
volume_db = -20.0
pitch_scale = 1.75

[node name="AcceptStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_u052i")
volume_db = -17.0

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 90.0
offset_top = 202.0
offset_right = 130.0
offset_bottom = 242.0
scale = Vector2(24.7109, 5.75947)
color = Color(0, 0, 0, 0.337255)

[node name="LevelSelectionLabel" type="Label" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -286.0
offset_top = 42.0
offset_right = 286.0
offset_bottom = 138.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_ehvep")
text = "Level Selection"
label_settings = ExtResource("4_d4l1l")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="SingleContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -187.0
offset_top = 134.0
offset_right = 188.0
offset_bottom = 237.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="SingleNewGameButton" type="Button" parent="SingleContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_3cqpp")
text = "New Game"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.038
anchor_top = 0.89
anchor_right = 0.078
anchor_bottom = 0.958
offset_left = 2.224
offset_top = 2.27997
offset_right = -1.856
offset_bottom = 0.215942
grow_vertical = 0
theme_override_constants/margin_left = -2
theme_override_constants/margin_top = -2
theme_override_constants/margin_right = -2
theme_override_constants/margin_bottom = -2

[node name="Button" type="Button" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("3_3cqpp")
theme_type_variation = &"small_w_icon"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Button"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 7.00006
offset_right = -13.0
offset_bottom = -13.9999
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_tjne4")
expand_mode = 1
stretch_mode = 4

[node name="CurrentLevel" type="Label" parent="."]
layout_mode = 2
offset_left = 536.0
offset_top = 238.0
offset_right = 707.0
offset_bottom = 276.0
text = "PLACEHOLDER"
label_settings = SubResource("LabelSettings_6i4mc")
horizontal_alignment = 1

[node name="CurrentRounds" type="Label" parent="."]
layout_mode = 2
offset_left = 536.0
offset_top = 325.0
offset_right = 707.0
offset_bottom = 363.0
text = "PLACEHOLDER"
label_settings = SubResource("LabelSettings_6i4mc")
horizontal_alignment = 1

[node name="LevelSlider" type="HSlider" parent="."]
layout_mode = 2
offset_left = 325.0
offset_top = 286.0
offset_right = 930.0
offset_bottom = 302.0
max_value = 2.0
tick_count = 2
metadata/_edit_lock_ = true

[node name="RoundSlider" type="HSlider" parent="."]
layout_mode = 2
offset_left = 326.0
offset_top = 370.0
offset_right = 931.0
offset_bottom = 386.0
min_value = 5.0
max_value = 13.0
value = 5.0
tick_count = 8

[node name="LevelLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 162.0
offset_top = 278.0
offset_right = 270.0
offset_bottom = 310.0
text = "Level:"
label_settings = SubResource("LabelSettings_6i4mc")
horizontal_alignment = 2

[node name="RoundsLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 113.0
offset_top = 357.0
offset_right = 273.0
offset_bottom = 389.0
text = "Rounds:"
label_settings = SubResource("LabelSettings_6i4mc")
horizontal_alignment = 2

[connection signal="mouse_entered" from="SingleContainer/SingleNewGameButton" to="." method="_on_single_new_game_button_mouse_entered"]
[connection signal="pressed" from="SingleContainer/SingleNewGameButton" to="." method="_on_single_new_game_button_pressed"]
[connection signal="mouse_entered" from="MarginContainer/Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="MarginContainer/Button" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="LevelSlider" to="." method="_on_level_slider_value_changed"]
[connection signal="value_changed" from="RoundSlider" to="." method="_on_round_slider_value_changed"]
